--- a/mobile/src/main/res/layout/app_bar_main.xml
+++ b/mobile/src/main/res/layout/app_bar_main.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="teamdevelite.yandereaudio20.pdesire.MainActivity">
+    tools:context="projectmeli.yandereaudio.pdesire.MainActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
