--- a/mobile/src/main/res/xml/pref_other_pdesireaudio.xml
+++ b/mobile/src/main/res/xml/pref_other_pdesireaudio.xml
@@ -4,6 +4,7 @@
          dismiss it. -->
     <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
     <Preference
+        android:key="profile_view_click"
         android:title="@string/main_author_title"
         android:summary="@string/main_author_description"
         />
