--- a/mobile/src/main/res/values/colors.xml
+++ b/mobile/src/main/res/values/colors.xml
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="colorPrimaryNew">#ffffff</color>
+    <color name="colorPrimaryDarkNew">@color/colorPrimaryNew</color>
+    <color name="colorAccentNew">#7b1fa2</color>
     <color name="colorAccent">#e70004</color>
 </resources>
