--- a/mobile/src/main/res/xml/pref_headers_pdesireaudio.xml
+++ b/mobile/src/main/res/xml/pref_headers_pdesireaudio.xml
@@ -2,11 +2,11 @@
 
     <!-- These settings headers are only used on tablets. -->
     <header
-        android:fragment="com.meli.pdesire.yandereservice.PDesireAudioControlFragment"
+        android:fragment="com.meli.pdesire.yandereservice.fragments.PDesireAudioControlFragment"
         android:icon="@null"
         android:title="@string/pref_header_pdesireaudio_controls" />
     <header
-        android:fragment="com.meli.pdesire.yandereservice.PDesireAudioCreditsFragment"
+        android:fragment="com.meli.pdesire.yandereservice.fragments.PDesireAudioCreditsFragment"
         android:icon="@null"
         android:title="@string/pref_header_pdesireaudio_credits" />
 
