Ready for SecureReplace
SecureReplace ensures via MD5 hashsum generation a 100% working copy

Signed-off-by: Tristan Marsell <tristan.marsell@t-online.de>

--- a/mobile/src/main/res/menu/activity_main_drawer.xml
+++ b/mobile/src/main/res/menu/activity_main_drawer.xml
@@ -47,6 +47,15 @@
         </menu>
     </item>
 
+    <item android:title="@string/settings">
+        <menu>
+            <item
+                android:id="@+id/settings"
+                android:icon="@drawable/ic_settings_black_24dp"
+                android:title="@string/yandere_settings"/>
+        </menu>
+    </item>
+
     <item android:title="@string/support">
         <menu>
             <item
