--- a/mobile/src/main/res/xml/pref_headers_sony.xml
+++ b/mobile/src/main/res/xml/pref_headers_sony.xml
@@ -2,11 +2,11 @@
 
     <!-- These settings headers are only used on tablets. -->
     <header
-        android:fragment="com.meli.pdesire.yandereservice.fragments.SSECallibrationFragment"
+        android:fragment="com.meli.pdesire.yanderecore.fragments.SSECallibrationFragment"
         android:icon="@null"
         android:title="@string/sse_callibration" />
     <header
-        android:fragment="com.meli.pdesire.yandereservice.fragments.SSRSonyCallibrationFragment"
+        android:fragment="com.meli.pdesire.yanderecore.fragments.SSRSonyCallibrationFragment"
         android:icon="@null"
         android:title="@string/ssr_sony_callibration" />
 
