Add Fabric.io Analytics for better bug tracking

--- a/mobile/src/main/res/xml/pref_analytics.xml
+++ b/mobile/src/main/res/xml/pref_analytics.xml
@@ -11,4 +11,14 @@
         android:key="analytics_help"
         android:title="@string/info_analytics" />
 
+    <SwitchPreference
+        android:defaultValue="true"
+        android:key="analytics_switch_fabric"
+        android:summary="@string/fabric_analytics_description"
+        android:title="@string/fabric_analytics" />
+
+    <Preference
+        android:key="analytics_help_fabric"
+        android:title="@string/info_analytics" />
+
 </PreferenceScreen>
