--- a/mobile/src/main/res/xml/pref_headers_settings.xml
+++ b/mobile/src/main/res/xml/pref_headers_settings.xml
@@ -5,4 +5,9 @@
         android:icon="@null"
         android:title="@string/analytics" />
 
+    <header
+        android:fragment="com.meli.pdesire.yanderecore.fragments.AdsFragment"
+        android:icon="@null"
+        android:title="@string/ads" />
+
 </preference-headers>
